UV Editor doesn't work when GPU Subdivision in the Viewport is enabled #96372

Closed
opened 2022-03-12 12:07:07 +01:00 by Matteo Scopel · 14 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e

Short description of error
I was unwrapping a very simple model when I noticed a weird, unpredictable behavior in the UV Editor. Specifically:
image.png

  1. vertices do not seem to be properly selectable (see the weird, different overlay in the UV Editor)
    image.png
  2. unwrapping occasionally and unpredictably causes a lot of corrupted edges to appear in the UV Editor

I initially thought that some of my addons was causing this, so I've disabled them, but the problem persisted. After some time, I've realized that disabling the Subdivision modifier solved the issue and made unwrapping predictable again. Thus, I've finally come to the conclusion that the new GPU Subdivision setting is the culprit. I confirm that disabling this setting makes everything work fine again.

Exact steps for others to reproduce the error

  1. unwrap an object with the subdivision modifier on it and GPU subdivision enabled in the settings.
  2. try to select a vertex. The selection will be different from usual.
  3. unwrapping the mesh might also create graphical corruption, as visible in the second screenshot.

I have also attached the file I was working on. I hope it can be useful for confirming this bug.

jar_model.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` **Short description of error** I was unwrapping a very simple model when I noticed a weird, unpredictable behavior in the UV Editor. Specifically: ![image.png](https://archive.blender.org/developer/F12923119/image.png) 1. vertices do not seem to be properly selectable (see the weird, different overlay in the UV Editor) ![image.png](https://archive.blender.org/developer/F12923121/image.png) 2. unwrapping occasionally and unpredictably causes a lot of corrupted edges to appear in the UV Editor I initially thought that some of my addons was causing this, so I've disabled them, but the problem persisted. After some time, I've realized that disabling the Subdivision modifier solved the issue and made unwrapping predictable again. Thus, I've finally come to the conclusion that the new GPU Subdivision setting is the culprit. I confirm that disabling this setting makes everything work fine again. **Exact steps for others to reproduce the error** 1. unwrap an object with the subdivision modifier on it and GPU subdivision enabled in the settings. 2. try to select a vertex. The selection will be different from usual. 3. unwrapping the mesh might also create graphical corruption, as visible in the second screenshot. I have also attached the file I was working on. I hope it can be useful for confirming this bug. [jar_model.blend](https://archive.blender.org/developer/F12923123/jar_model.blend)
Author

Added subscriber: @scopelma

Added subscriber: @scopelma

#96628 was marked as duplicate of this issue

#96628 was marked as duplicate of this issue

Added subscribers: @kevindietrich, @deadpin

Added subscribers: @kevindietrich, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
CC @kevindietrich
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @josemartinez-2

Added subscriber: @josemartinez-2

Added subscriber: @josephhansen

Added subscriber: @josephhansen

The Align X and Align Y operators for UV Editing don't work correctly either with GPU Subdivision on- you have to use each operator 20-30 times before it actually aligns correctly

The Align X and Align Y operators for UV Editing don't work correctly either with GPU Subdivision on- you have to use each operator 20-30 times before it actually aligns correctly

This issue was referenced by 3bc0e39850

This issue was referenced by 3bc0e39850a1c4c8e45bd393960acf2d483090da

This issue was referenced by 612ec0ecdf

This issue was referenced by 612ec0ecdf047980164b3820e5a890d0fd0f0969

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-03-23 04:04:35 +01:00

I could not reproduce the corrupted data case.

@josephhansen this should be reported separately.

I could not reproduce the corrupted data case. @josephhansen this should be reported separately.
Member

@kevindietrich hi, can this be backported to 3.1 corrective release?

@kevindietrich hi, can this be backported to 3.1 corrective release?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96372
No description provided.